added a headlessresourcedispatcherhostdelegate so that we do not crash when a website requests a client cert store

BUG=714534

Review-Url: https://codereview.chromium.org/2852633002
Cr-Commit-Position: refs/heads/master@{#468280}