headless/lib/browser/headless_content_browser_client.h
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define HEADLESS_LIB_BROWSER_HEADLESS_CONTENT_BROWSER_CLIENT_H_
 
 #include "content/public/browser/content_browser_client.h"
+#include "headless/lib/browser/headless_resource_dispatcher_host_delegate.h"
 
 namespace headless {
 
@@ -38,8 +39,13 @@ class HeadlessContentBrowserClient : public content::ContentBrowserClient {
   void AppendExtraCommandLineSwitches(base::CommandLine* command_line,
                                       int child_process_id) override;
 
+  void ResourceDispatcherHostCreated() override;
+
  private:
   HeadlessBrowserImpl* browser_;  // Not owned.
+
+  std::unique_ptr<HeadlessResourceDispatcherHostDelegate>
+      resource_dispatcher_host_delegate_;
 
   DISALLOW_COPY_AND_ASSIGN(HeadlessContentBrowserClient);
 };
