headless/lib/browser/headless_resource_dispatcher_host_delegate.cc
@@ -1,0 +1,16 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2017 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#include "headless/lib/browser/headless_resource_dispatcher_host_delegate.h"
+
+namespace headless {
+
+HeadlessResourceDispatcherHostDelegate::
+    HeadlessResourceDispatcherHostDelegate() {}
+
+HeadlessResourceDispatcherHostDelegate::
+    ~HeadlessResourceDispatcherHostDelegate() {}
+
+}  // namespace headless
